--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 
-    <iframe src="/assets/pdf/catalogo picacho.pdf" title="Visor de PDF"></iframe>
+    <iframe src="/catalogo picacho.pdf" title="Visor de PDF"></iframe>
 
 </body>
 </html>
