--- a/Index.html
+++ b/Index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
 
-    <iframe src="/assets/pdf/catalogo picacho.pdf" title="Visor de PDF" scrolling="auto"></iframe>
+    <iframe src="/assets/pdf/catalogo-picacho-nuevo.pdf" title="Visor de PDF" scrolling="auto"></iframe>
 
 </body>
 </html>
