documento con visor de google

--- a/Index.html
+++ b/Index.html
@@ -2,12 +2,16 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Visor de PDF</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/assets/css/styles.css">
+    <title>Catalogo digital</title>
 </head>
 <body>
-
-    <iframe src="/assets/pdf/catalogo-picacho-nuevo.pdf" title="Visor de PDF" scrolling="auto"></iframe>
-
+    <!--
+    <div>
+        <a href="/assets/pdf/catalogo-picacho-nuevo.pdf" data-ajax="false">Link</a>
+    </div>
+    -->
+    <iframe src="http://docs.google.com/gview?url=https://catalogopicacho.netlify.app/assets/pdf/catalogo-picacho-nuevo.pdf&embedded=true" frameborder="0" id="myiframe"></iframe>
 </body>
 </html>
