--- a/Index.html
+++ b/Index.html
@@ -7,11 +7,6 @@
     <title>Catalogo digital</title>
 </head>
 <body>
-    <!--
-    <div>
-        <a href="/assets/pdf/catalogo-picacho-nuevo.pdf" data-ajax="false">Link</a>
-    </div>
-    -->
-    <iframe src="http://docs.google.com/gview?url=https://catalogopicacho.netlify.app/assets/pdf/catalogo-picacho-nuevo.pdf&embedded=true" frameborder="0" id="myiframe"></iframe>
+    <iframe src="http://docs.google.com/gview?url=https://catalogopicacho.netlify.app/assets/pdf/catalogo-picacho-nuevo.pdf&embedded=true" frameborder="0"></iframe>
 </body>
 </html>
